[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bipsea"
version = "1.1.1"
description = "Composable Python CLI for Bitcoin mnemonics and BIP-85 secrets."
readme = "README.md"
authors = ["Aneesh Karve <bonded_metals_0u@icloud.com>"]
license = "Apache-2.0"
homepage = "https://github.com/akarve/bipsea"
repository = "https://github.com/akarve/bipsea"
keywords = ["Bitcoin", "BIP85", "BIP32", "cryptography"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = ">=3.8.1, <4.0"
click = "~8.1.3"
base58 = "~2.1.1"
build = "~1.2.1"
ecdsa = "~0.19.0"
poetry = "^1.8.3"

[tool.poetry.group.dev.dependencies]
black = "~24.4.2"
flake8 = "~7.0.0"
isort = "~5.13.2"
importlib-resources = { version = "^6.4.0", python = "<3.9" }
pycryptodome = "~3.20.0"
pytest = "~8.2.1"
pytest-xdist = "~3.6.1"
toml = "^0.10.2"

[tool.poetry.scripts]
bipsea = "bipsea.bipsea:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bipsea", "bipsea.wordlists"]

[tool.setuptools.package-data]
"bipsea" = ["wordlists/*.txt"]
